--- a/DSImager.Application/Views/MainWindow.xaml
+++ b/DSImager.Application/Views/MainWindow.xaml
@@ -1,13 +1,27 @@
 ﻿<views:BaseView
     x:TypeArguments="viewModels:MainViewModel" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:system="clr-namespace:System;assembly=mscorlib"
-        xmlns:viewModels="clr-namespace:DSImager.ViewModels;assembly=DSImager.ViewModels"
-        xmlns:app="clr-namespace:DSImager.Application"
-        xmlns:views="clr-namespace:DSImager.Application.Views"
-        x:Class="DSImager.Application.Views.MainWindow"
-        Title="{Binding ViewTitle}" Height="768" Width="1366" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+    xmlns:system="clr-namespace:System;assembly=mscorlib"
+    xmlns:viewModels="clr-namespace:DSImager.ViewModels;assembly=DSImager.ViewModels"
+    xmlns:app="clr-namespace:DSImager.Application"
+    xmlns:views="clr-namespace:DSImager.Application.Views"
+    xmlns:media="clr-namespace:System.Windows.Media;assembly=PresentationCore"
+    xmlns:converters="clr-namespace:DSImager.Application.Converters"
+    xmlns:interaction="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:appcontrols="clr-namespace:DSImager.Application.Controls"
+    x:Class="DSImager.Application.Views.MainWindow"
+    Title="{Binding ViewTitle}" Height="768" Width="1366" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}">
+    <controls:MetroWindow.Resources>
+        <converters:ListToIndexListConverter x:Key="ListToIndexListConverter"></converters:ListToIndexListConverter>
+        <converters:ListLengthMinusOneConverter x:Key="ListLengthMinusOneConverter"></converters:ListLengthMinusOneConverter>
+        <converters:ComposingConverter x:Key="TickIndicesToDoublesConverter">
+            <converters:ComposingConverter.Converters>
+                <converters:ListToIndexListConverter></converters:ListToIndexListConverter>
+                <converters:NumberListDoubleCollectionConverter></converters:NumberListDoubleCollectionConverter>
+            </converters:ComposingConverter.Converters>
+        </converters:ComposingConverter>
+    </controls:MetroWindow.Resources>
     <Grid x:Name="TopLevelGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" x:Name="MainMenuItemRow"/>
@@ -57,25 +71,34 @@
 					Click="OnPreviewExposureClicked"
 					ToolTip="Exposure setting">
                     <Button.ContextMenu>
-                        <ContextMenu BorderBrush="Transparent" VerticalOffset="10" HasDropShadow="False">
+                        <ContextMenu BorderBrush="Transparent" VerticalOffset="0" HasDropShadow="False">
                             <MenuItem>
                                 <MenuItem.Template>
                                     <ControlTemplate TargetType="{x:Type MenuItem}">
-                                        <Grid Width="400">
+                                        <StackPanel Height="32" Width="400" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" Orientation="Horizontal">
+                                        <Grid Width="400" VerticalAlignment="Center">
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="Auto"/>
                                             </Grid.ColumnDefinitions>
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="Auto"/>
                                             </Grid.RowDefinitions>
-                                            <Slider IsSnapToTickEnabled="True" Width="400" 
-												Height="20" Maximum="100" 
-												Value="1"
-												Minimum="1" TickPlacement="TopLeft" AutoToolTipPlacement="TopLeft" 
-												LargeChange="10"
+                                            <appcontrols:PreviewExposureSlider 
+                                                Style="{DynamicResource {x:Type Slider}}"
+                                                IsSnapToTickEnabled="True" Width="400"
+                                                IndexBoundValues="{Binding PreviewExposureOptions}"
+												Height="20" 
+												Value="{Binding SelectedPreviewExposureIndex}"
+    											Minimum="0" 
+                                                Maximum="{Binding PreviewExposureOptions, Converter={StaticResource ListLengthMinusOneConverter}}"
+                                                TickPlacement="TopLeft" AutoToolTipPlacement="TopLeft" 
+												LargeChange="5"
+                                                Ticks="{Binding PreviewExposureOptions, Converter={StaticResource TickIndicesToDoublesConverter}}"
 												BorderThickness="0,0,0,0"
-                                                    />
+                                                >
+                                            </appcontrols:PreviewExposureSlider>
                                         </Grid>
+                                        </StackPanel>
                                     </ControlTemplate>
                                 </MenuItem.Template>
                             </MenuItem>
