--- a/DSImager.Application/Views/DeviceInfoDialog.xaml
+++ b/DSImager.Application/Views/DeviceInfoDialog.xaml
@@ -4,7 +4,9 @@
         xmlns:views="clr-namespace:DSImager.Application.Views"
         xmlns:viewModels="clr-namespace:DSImager.ViewModels;assembly=DSImager.ViewModels"
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-        Title="Camera Information" Height="347" Width="563" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" BorderThickness="1" BorderBrush="Black">
+        Title="Camera Information" Height="347" Width="563" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" 
+                BorderThickness="1" BorderBrush="Black"
+                WindowStartupLocation="CenterScreen">
     <controls:MetroWindow.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </controls:MetroWindow.Resources>
