--- a/DSImager.Application/Views/MainWindow.xaml
+++ b/DSImager.Application/Views/MainWindow.xaml
@@ -10,19 +10,24 @@
     xmlns:converters="clr-namespace:DSImager.Application.Converters"
     xmlns:interaction="http://schemas.microsoft.com/expression/2010/interactivity"
     xmlns:appcontrols="clr-namespace:DSImager.Application.Controls"
+    xmlns:fa="http://schemas.fontawesome.io/icons/"
     x:Class="DSImager.Application.Views.MainWindow"
     Title="{Binding ViewTitle}" Height="768" Width="1366" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
     WindowStartupLocation="CenterScreen">
+
     <controls:MetroWindow.Resources>
         <converters:ListToIndexListConverter x:Key="ListToIndexListConverter"></converters:ListToIndexListConverter>
         <converters:ListItemFromIndexConverter x:Key="ListItemFromIndexConverter"></converters:ListItemFromIndexConverter>
         <converters:ListLengthMinusOneConverter x:Key="ListLengthMinusOneConverter"></converters:ListLengthMinusOneConverter>
+        <converters:SelectedListIndexItemToStringConverter x:Key="SelectedListIndexItemToStringConverter"></converters:SelectedListIndexItemToStringConverter>
+        <converters:LogCategoryToIconConverter x:Key="LogCategoryToIconConverter"></converters:LogCategoryToIconConverter>
         <converters:ComposingConverter x:Key="TickIndicesToDoublesConverter">
             <converters:ComposingConverter.Converters>
                 <converters:ListToIndexListConverter></converters:ListToIndexListConverter>
                 <converters:NumberListDoubleCollectionConverter></converters:NumberListDoubleCollectionConverter>
             </converters:ComposingConverter.Converters>
         </converters:ComposingConverter>
+        
     </controls:MetroWindow.Resources>
     <Grid x:Name="TopLevelGrid">
         <Grid.RowDefinitions>
@@ -120,7 +125,7 @@
                                         </TransformGroup>
                                     </Label.RenderTransform>
                                 </Label>
-                                <Label FontSize="9" Content="{Binding Path=SelectedPreviewExposureStringValue}" RenderTransformOrigin="0.5,0.5" Width="36"  HorizontalContentAlignment="Right">
+                                <Label Content="{Binding Path=SelectedPreviewExposure}" FontSize="9" RenderTransformOrigin="0.5,0.5" Width="36"  HorizontalContentAlignment="Right">
                                     <Label.RenderTransform>
                                         <TransformGroup>
                                             <ScaleTransform/>
@@ -139,16 +144,51 @@
 					Margin="4,0" 
 					ToolTip="Toggle continuous exposure" />
                 <Button FontFamily="{DynamicResource FontAwesome}"
-					Content="&#xF009;"
+                    Content="{Binding}"
 					ToolTip="Binning" 
 					Click="OnPreviewBinningClicked">
                     <Button.ContextMenu>
-                        <ContextMenu>
-                            <MenuItem Header="None" IsCheckable="True"/>
-                            <MenuItem Header="2x2" IsCheckable="True"/>
-                            <MenuItem Header="3x3" IsCheckable="True"/>
+                        <ContextMenu ItemsSource="{Binding BinningModeOptions}">
+                            <ContextMenu.ItemContainerStyle>
+                                <Style TargetType="MenuItem">
+                                    <Setter Property="Command" Value="{Binding DataContext.SetBinningCommand, RelativeSource={RelativeSource AncestorType=Window}}"></Setter>
+                                    <Setter Property="CommandParameter" Value="{Binding}"></Setter>
+                                </Style>
+                            </ContextMenu.ItemContainerStyle>
+                            <ContextMenu.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Value}"/>
+                                </DataTemplate>
+                            </ContextMenu.ItemTemplate>
                         </ContextMenu>
                     </Button.ContextMenu>
+                    <Button.ContentTemplate>
+                        <DataTemplate>
+                            <Canvas Width="30" Height="30">
+                                <Label Content="&#xF009;" Height="30" Width="30" RenderTransformOrigin="0.5,0.5" 
+                                       FontSize="19">
+                                    <Label.RenderTransform>
+                                        <TransformGroup>
+                                            <ScaleTransform/>
+                                            <SkewTransform/>
+                                            <RotateTransform/>
+                                            <TranslateTransform Y="-2"/>
+                                        </TransformGroup>
+                                    </Label.RenderTransform>
+                                </Label>
+                                <Label Content="{Binding Path=SelectedBinningMode.Value}" FontSize="9" RenderTransformOrigin="0.5,0.5" Width="36"  HorizontalContentAlignment="Right">
+                                    <Label.RenderTransform>
+                                        <TransformGroup>
+                                            <ScaleTransform/>
+                                            <SkewTransform/>
+                                            <RotateTransform/>
+                                            <TranslateTransform X="0" Y="16"/>
+                                        </TransformGroup>
+                                    </Label.RenderTransform>
+                                </Label>
+                            </Canvas>
+                        </DataTemplate>
+                    </Button.ContentTemplate>
                 </Button>
 
             </ToolBar>
@@ -177,7 +217,32 @@
 
             </ScrollViewer>
         </Canvas>
-        <StatusBar HorizontalAlignment="Left" Height="30" Grid.Row="3" VerticalAlignment="Top" Width="{Binding Parent.ActualWidth, RelativeSource={RelativeSource Self}}" Background="#FF343434" />
+        <StatusBar HorizontalAlignment="Left" Height="30" Grid.Row="3" VerticalAlignment="Top" Width="{Binding Parent.ActualWidth, RelativeSource={RelativeSource Self}}" Background="#FF343434">
+            <Grid Width="{Binding Parent.ActualWidth, RelativeSource={RelativeSource Self}}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                    <ColumnDefinition Width="12*"></ColumnDefinition>
+                    <ColumnDefinition Width="3*"></ColumnDefinition>
+                    <ColumnDefinition Width="3*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" Content="&#x00ab; Log &#x00bb;" BorderBrush="#00CCCCCC"></Button>
+                <Button Grid.Column="1" HorizontalContentAlignment="Left" BorderBrush="#00CCCCCC" Content="{Binding}">
+                    <Button.ContentTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal" Margin="0">
+                                <fa:FontAwesome Icon="{Binding Path=LogMessages[0].Category, Converter={StaticResource LogCategoryToIconConverter}}" FontFamily="{DynamicResource FontAwesome}" FontSize="14" Margin="15,0,0,0"></fa:FontAwesome>
+                                <TextBlock Margin="15,0,0,0" FontSize="11" VerticalAlignment="Center">
+                                    <TextBlock.Text>
+                                        <Binding Path="LogMessages[0].Message"></Binding>
+                                    </TextBlock.Text>
+                                </TextBlock>
+                            </StackPanel>
+                        </DataTemplate>
+                    </Button.ContentTemplate>
+                </Button>
+            </Grid>
+            
+        </StatusBar>
 
 
     </Grid>
