Added tests, started implementing imaging methods. Ditched the ICamera interface in favor of convenience - using the ASCOM interfaces is much easier and doesn't require duplicating the interfaces. In theory the device layer could later still be implemented separately and still use the ASCOM interfaces.

--- a/DSImager.Application/Views/ConnectDialog.xaml
+++ b/DSImager.Application/Views/ConnectDialog.xaml
@@ -8,7 +8,8 @@
         xmlns:views="clr-namespace:DSImager.Application.Views"
         Title="Connect to a camera" Height="182" Width="474" 
         Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" ResizeMode="NoResize"
-                WindowStartupLocation="CenterScreen">
+                WindowStartupLocation="CenterScreen"
+                ShowCloseButton="False">
 	<Window.Resources>
 		<Storyboard x:Key="ShowError">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Height)">
