--- a/DSImager.Application/Views/DeviceInfoDialog.xaml
+++ b/DSImager.Application/Views/DeviceInfoDialog.xaml
@@ -26,7 +26,7 @@
                             </Grid.ColumnDefinitions>
                             
                                 <Label Margin="1,1,1,1" Content="Name" Background="Black"/>
-                                <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Information.Name}" Background="Black"/>
+                                <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Name}" Background="Black"/>
 
 
                         </Grid>
@@ -36,7 +36,7 @@
                                 <ColumnDefinition Width="70*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Description" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Information.Description}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Description}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -44,7 +44,7 @@
                                 <ColumnDefinition Width="70*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Sensor Name" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Information.SensorName}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.SensorName}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -52,7 +52,7 @@
                                 <ColumnDefinition Width="70*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Sensor Type" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Information.SensorType}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.SensorType}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -60,7 +60,7 @@
                                 <ColumnDefinition Width="70*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Driver Info" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Information.DriverInfo}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.DriverInfo}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -68,7 +68,7 @@
                                 <ColumnDefinition Width="70*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Driver Version" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Information.DriverVersion}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.DriverVersion}" Background="Black"/>
                         </Grid>
 
                     </StackPanel>
@@ -85,7 +85,14 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Resolution" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.Resolution}" Background="Black"/>
+                            <TextBlock Margin="1,1,1,1" Grid.Column="1" Background="Black">
+                                <TextBlock.Text>
+                                    <MultiBinding StringFormat="{}{0}x{1}">
+                                        <Binding Path="Camera.CameraXSize"></Binding>
+                                        <Binding Path="Camera.CameraYSize"></Binding>
+                                    </MultiBinding>
+                                </TextBlock.Text>
+                            </TextBlock>
 
                         </Grid>
                         <Grid>
@@ -94,7 +101,7 @@
                                 <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Pixel size" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.PixelSizeX}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.PixelSizeX}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -102,7 +109,7 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Minimum Exposure" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.MinExposure}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.ExposureMin}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -110,15 +117,15 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Maximum Exposure" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.MaxExposure}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.ExposureMax}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="40*"></ColumnDefinition>
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
-                            <Label Margin="1,1,1,1" Content="Has Adjustable Gain" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.HasAdjustableGain}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Content="Gain index" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Gain}" Background="Black"/>
                         </Grid>
                         <Grid Visibility="{Binding Camera.Capabilities.HasAdjustableGain, Converter={StaticResource BooleanToVisibilityConverter}}">
                             <Grid.ColumnDefinitions>
@@ -126,7 +133,7 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Minimum Gain" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.MinGain}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.GainMin}" Background="Black"/>
                         </Grid>
                         <Grid Visibility="{Binding Camera.Capabilities.HasAdjustableGain, Converter={StaticResource BooleanToVisibilityConverter}}">
                             <Grid.ColumnDefinitions>
@@ -134,7 +141,7 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Maximum Gain" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.MaxGain}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.GainMax}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -142,7 +149,7 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Maximum Binning X" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.MaxBinX}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.MaxBinX}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -150,7 +157,7 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Maximum Binning Y" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.MaxBinY}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.MaxBinY}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -158,7 +165,7 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Supports Asymmetric Binning" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.CanAsymmetricBin}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.CanAsymmetricBin}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -166,7 +173,7 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Maximum ADU" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.MaxAdu}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.MaxADU}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -174,7 +181,7 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Electrons Per ADU" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.ElectronsPerAdu}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.ElectronsPerADU}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -182,7 +189,7 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Can Set CCD Temperature" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.CanSetCcdTemperature}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.CanSetCCDTemperature}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -190,7 +197,7 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Has Shutter" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.HasShutter}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.HasShutter}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -198,7 +205,7 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Can Abort Exposure" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.CanAbortExposure}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.CanAbortExposure}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -206,7 +213,7 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Can Stop Exposure" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.CanStopExposure}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.CanStopExposure}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -214,7 +221,7 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Can Pulse Guide" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.CanPulseGuide}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.CanPulseGuide}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -222,7 +229,7 @@
                                     <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Can Get Cooler Power" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.CanGetCoolerPower}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.CanGetCoolerPower}" Background="Black"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -230,7 +237,7 @@
                                 <ColumnDefinition Width="60*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Label Margin="1,1,1,1" Content="Supports Fast Readout" Background="Black"/>
-                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.Capabilities.CanFastReadOut}" Background="Black"/>
+                            <Label Margin="1,1,1,1" Grid.Column="1" Content="{Binding Camera.CanFastReadout}" Background="Black"/>
                         </Grid>
                     </StackPanel>
                 </Grid>
